--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CandyTika</title>
 </head>
 <body>
-    <img src="/ปก.png" width="100%">
+    <img src="/ปก.png" width="100%" height="100%">
     <ul>
         <li><a class="active" href="/index.html">สั่งซื้อสินค้า</a></li>
         <li><a href="/Number T.html">เลขพัสดุ</a></li>
@@ -19,8 +19,15 @@
 <a href="https://forms.gle/31iLfLsRZSNCCx1PA"><button class="btn">สั่งซื้อสินค้า : พร้อมส่ง/พรีออเดอร์</button></a>
 <br><br>
 <a href="https://forms.gle/HFhnhzXZdnibraQ36"><button class="btn">หาร 2023 SSGT NCT 127 </button></a>
+<br>
+⊹˚. ♡ <br><br>
+✰<br><br>
+:･ﾟ✧:･.☽˚｡･ﾟ✧:･.: <br><br>
+🎧 ★ <br><br>
+˚　　　　✦　🪐　　.　　. 　 ˚　.　　　　 🌀　 . ✦　　　 　˚　　　　 <br> <br>
+　🚀　　.   　　˚　　 　　*　　 　　✦　　　.　　.　　　✦　˚ 　☄️ 　　　 ˚🌒　.˚　　　　✦　　　.　　. 　 ˚　.　　　　 　　 　🌀　　　 ✦　　.
 
-<img src="/ดรีม.png" width="100%">
+<img src="/ท้าย.png" width="100%">
 
     
 </html>
