--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <li><a href="https://twitter.com/candy_tika04_?s=20&t=Ntq2Z4SCpWj32fmAZEHv_g">twitter</a></li>
       </ul>
       <br><br><br>
-<a href="https://forms.gle/31iLfLsRZSNCCx1PA"><button class="btn">สั่งซื้อสินค้า : พร้อมส่ง/พรีออเดอร์</button></a>
+<a href="https://forms.gle/31iLfLsRZSNCCx1PA" target="_blank"><button class="btn">สั่งซื้อสินค้า : พร้อมส่ง/พรีออเดอร์</button></a>
 <br><br>
-<a href="https://forms.gle/HFhnhzXZdnibraQ36"><button class="btn">หาร 2023 SSGT NCT 127 </button></a>
+<a href="https://forms.gle/HFhnhzXZdnibraQ36" target="_blank"><button class="btn">หาร 2023 SSGT NCT 127 </button></a>
 <br>
 ⊹˚. ♡ <br><br>
 ✰<br><br>
