--- a/Number T.html
+++ b/Number T.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <style>
+    body{
+        background-color: #F8EDE3;
+    }
     table {
       font-family: arial, sans-serif;
       border-collapse: collapse;
@@ -21,6 +24,9 @@
     
     tr:nth-child(even) {
       background-color: #dddddd;
+    }
+    h1{
+        color: #A68DAD;
     }
     </style>
 <body>
