--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <a href="https://forms.gle/31iLfLsRZSNCCx1PA" target="_blank"><button class="btn">สั่งซื้อสินค้า : พร้อมส่ง/พรีออเดอร์</button></a>
 <br><br>
 <a href="https://forms.gle/HFhnhzXZdnibraQ36" target="_blank"><button class="btn">หาร 2023 SSGT NCT 127 </button></a>
+<br><br>
+<a href="https://forms.gle/ajPBnGDJ6CnkburN7" target="_blank"><button class="btn">หาร 2023 SSGT NCT DREAM </button></a>
 
 <img src="/ท้าย.png" width="100%">
 
